<resources>
    <string name="app_name">KotlinEjercicioRegistroBar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_ver">Ver Agregados</string>
    <string name="btn_agregar">Agregar</string>
    <string name="et_nombre_item">Ingresa el nombre del item aquí</string>
    <string name="tv_cantidad">Elija la cantidad</string>
    <string name="tv_total">Total Actual</string>
    <string name="tv_nombre_item2">Nombre Item</string>
    <string name="tv_cantidad2">Cantidad</string>
    <string name="tv_total_actual2">Total Actual</string>
</resources>